--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = a789e0aad
+	base = aacf48b2b
 	trim = mcap_vendor
-	trimbase = 
+	trimbase = a789e0aad
