--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 6290b5efb
+	base = 43dd9ebeb
 	trim = ros2bag
-	trimbase = 
+	trimbase = 6290b5efb
