--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 756ec37db
+	base = 4f74f40a6
 	trim = rosbag2
-	trimbase = 
+	trimbase = 756ec37db
