--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = b451205c4
+	base = 45b167bac
 	trim = rosbag2_compression
-	trimbase = 
+	trimbase = b451205c4
