--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 64097ea38
+	base = 77d5dc00c
 	trim = rosbag2_compression_zstd
-	trimbase = 
+	trimbase = 64097ea38
