--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = f376dc807
+	base = 2b3073e25
 	trim = rosbag2_cpp
-	trimbase = 
+	trimbase = f376dc807
