--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = cd4ecf652
+	base = 0e6bcdbe5
 	trim = rosbag2_examples/rosbag2_examples_cpp
-	trimbase = 
+	trimbase = cd4ecf652
