--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = e011056c6
+	base = 8823fbfd9
 	trim = rosbag2_examples/rosbag2_examples_py
-	trimbase = 
+	trimbase = e011056c6
