--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 08f46d7ce
+	base = f403e3b3f
 	trim = rosbag2_interfaces
-	trimbase = 
+	trimbase = 08f46d7ce
