--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 76d73da4e
 	base = 2755f12fe
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	trimbase = 545591841
+	trimbase = 
