--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 17fcf81ae
+	base = 93433c51b
 	trim = rosbag2_performance/rosbag2_performance_benchmarking
-	trimbase = 
+	trimbase = 17fcf81ae
