--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 76d73da4e
 	base = c86374c03
 	trim = rosbag2_performance/rosbag2_performance_benchmarking_msgs
-	trimbase = 05616d69b
+	trimbase = 
