--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 647bd5581
+	base = 13f030f71
 	trim = rosbag2_performance/rosbag2_performance_benchmarking_msgs
-	trimbase = 
+	trimbase = 647bd5581
