--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 7a75318e5
+	base = cb059ccd4
 	trim = rosbag2_py
-	trimbase = 
+	trimbase = 7a75318e5
