--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 9d0d38afc
+	base = a2ee69c4e
 	trim = rosbag2_storage
-	trimbase = 
+	trimbase = 9d0d38afc
