--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 2546d23c5
+	base = b59f41009
 	trim = rosbag2_storage_default_plugins
-	trimbase = 
+	trimbase = 2546d23c5
