--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = e3ea6cf33
+	base = f8c0e08b2
 	trim = rosbag2_storage_mcap
-	trimbase = 
+	trimbase = e3ea6cf33
