--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 6fc5cfa30
+	base = 867d01251
 	trim = rosbag2_storage_sqlite3
-	trimbase = 
+	trimbase = 6fc5cfa30
