--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 4c3012d74
+	base = cec71ba64
 	trim = rosbag2_test_common
-	trimbase = 
+	trimbase = 4c3012d74
