--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = 010c0366e
+	base = 89911160a
 	trim = rosbag2_test_msgdefs
-	trimbase = 
+	trimbase = 010c0366e
