--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = da5733a7c
+	base = 570270535
 	trim = rosbag2_tests
-	trimbase = 
+	trimbase = da5733a7c
