--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = caa2096df
+	base = 78e5777c4
 	trim = rosbag2_transport
-	trimbase = 
+	trimbase = caa2096df
