--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = fbc6b934e
+	base = ff6a5ad02
 	trim = shared_queues_vendor
-	trimbase = 
+	trimbase = fbc6b934e
