--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = c37a52227
+	base = b99aaf147
 	trim = sqlite3_vendor
-	trimbase = 
+	trimbase = c37a52227
