--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4b86a77d6
-	base = df9840163
+	base = b302c00a3
 	trim = zstd_vendor
-	trimbase = 
+	trimbase = df9840163
