--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_performance_benchmarking_msgs
-	previous = 
-	base = aee59adefbf4
+	previous = aee59adefbf4
+	base = 1de277e43beb
 	trim = 
 	trimbase = 
