--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_compression_zstd
-	previous = 
-	base = 990af2283748
+	previous = 990af2283748
+	base = f349e1496eab
 	trim = 
 	trimbase = 
