--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros2bag
-	previous = 
-	base = e2fa1dd19b4d
+	previous = e2fa1dd19b4d
+	base = 7ab1c90cbe17
 	trim = 
 	trimbase = 
