--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_examples_cpp
-	previous = 
-	base = 4d95c118ba5f
+	previous = 4d95c118ba5f
+	base = 32b50298c83c
 	trim = 
 	trimbase = 
