--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_interfaces
-	previous = 
-	base = 863de99ad659
+	previous = 863de99ad659
+	base = aa5a6274e3c9
 	trim = 
 	trimbase = 
