--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/sqlite3_vendor
-	previous = 
-	base = e5517e98041d
+	previous = e5517e98041d
+	base = 60f381ed934f
 	trim = 
 	trimbase = 
