--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rosbag2_examples_py
-	previous = 
-	base = d1e8b29661e9
+	previous = d1e8b29661e9
+	base = 84b9c8657e64
 	trim = 
 	trimbase = 
