--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/zstd_vendor
-	previous = 
-	base = 2932e4c5ac88
+	previous = 2932e4c5ac88
+	base = d01e58b730c0
 	trim = 
 	trimbase = 
